# aoc2020

./: aoc.opam  dune-project  watch
lib/: aoc.ml  d0.ml  d1.ml  d10.ml  d11.ml  d2.ml  d3.ml  d4.ml  d5.ml  d6.ml  d7.ml  d8.ml  d9.ml  day.ml  dune  io.ml
