(lang dune 3.16)

(name aoc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Allen Chen")

(maintainers "Allen Chen")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
